# MiniCiv

./: CMakeLists.txt  README.md  docker-compose.yml
backend/: CMakeLists.txt
backend/primitive_game/include/EngineElements/: DamageCalculator.h  TreeCreator.h  TypeMatcher.h  UnitsMover.h
backend/primitive_game/include/Models/Achivemets/: Achive.h  AchiveType.h  BasicAchive.h
backend/primitive_game/include/Models/Buildings/: AchiveBuildingsTypes.h  BasicBuilding.h  BuildingType.h  EconomicBuildings.h  PopulationBuildings.h  SpecialBuildings.h  SpriteBuilding.h
backend/primitive_game/include/Models/City/: City.h
backend/primitive_game/include/Models/CityImprovements/: BasicImprovement.h  Improvements.h
backend/primitive_game/include/Models/Game/: Game.h
backend/primitive_game/include/Models/Map/: Map.h
backend/primitive_game/include/Models/Resource/: BasicResource.h  ResourceType.h  Resources.h
backend/primitive_game/include/Models/Techs/: BasicTech.h  Techs.h
backend/primitive_game/include/Models/Terrains/: BasicTerrain.h  SlowingEffects.h  TerrainTypes.h  Terrains.h
backend/primitive_game/include/Models/Tile/: Tile.h
backend/primitive_game/include/Models/Tribe/: NationType.h  Tribe.h  TribeAbilitiesTypes.h
backend/primitive_game/include/Models/Units/: AquaticUnits.h  BasicUnits.h  UnitAttackType.h  UnitMovementType.h  UnitType.h
backend/primitive_game/src/EngineElementsRealization/: DamageCalculator.cpp  TreeCreator.cpp  TypeMatcher.cpp
backend/primitive_game/src/ModelsRealization/Buildings/: BasicBuilding.cpp  PopulationBuildings.cpp
backend/primitive_game/src/ModelsRealization/CityImprovements/: Improvements.cpp
backend/primitive_game/src/ModelsRealization/Game/: Game.cpp
backend/primitive_game/src/ModelsRealization/Map/: Map.cpp
backend/primitive_game/src/ModelsRealization/Tile/: Tile.cpp
backend/primitive_game/src/ModelsRealization/Tribe/: Tribe.cpp
backend/primitive_game/src/ModelsRealization/Сity/: City.cpp
backend/primitive_game/tests/: CMakeLists.txt  CoreGameTests.cpp
frontend/: CMakeLists.txt  main.cpp
frontend/GameClient/: GameClient.cpp  GameClient.h
frontend/MapRender/: MapRenderer.cpp  MapRenderer.h
frontend/qml/: GameSelectionDialog.qml  LoginDialog.qml  NationSelectionDialog.qml  main.qml  qmldir  resources.qrc
frontend/tests/: test_gameclient.cpp
migrations/: 001_init.sql
server/: CMakeLists.txt
server/include/Actions/: Action.h  ActionsPartTypes.h
server/include/EngineElements/: ActionRealizer.h  ActionRouter.h  BotManager.h  BotOperator.h  IndexDisposer.h  InfoEstimator.h  RandomGenerator.h
server/include/Repository/: GameRepository.h
server/include/User/: Bot.h  Player.h  User.h
server/include/gameSession/: GameSession.h  GameSessionManager.h
server/include/server/: http_server.h
server/src/: main.cpp
server/src/Actions/: Action.cpp
server/src/EngineElements/: ActionRealizer.cpp
server/src/Repository/: GameRepository.cpp
server/src/User/: Bot.cpp  Player.cpp
server/src/gameSession/: GameSession.cpp  GameSessionManager.cpp
server/src/server/: http_server.cpp
server/tests/: CMakeLists.txt  HttpTestClient.h  ServerTests.cpp  test_main.cpp
